--- a/src/style.css
+++ b/src/style.css
@@ -5,16 +5,37 @@ body {
 nav {
     display: flex;
     justify-content: center;
+    gap:30px;
     padding: 20px;
     background-color: rgb(5,15,55);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-    .disconnect {
+    .nav-action {
         all:unset;
         color: white;
         cursor: pointer;
     }
 
+}
+
+.recipe-list-header{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.add-recipe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:40px;
+    height:40px;
+    background-color: rgb(135,165,255);
+    border-radius: 20px;
+
+    i {
+        color: white;
+    }
 }
 
 .recipe-list {
@@ -59,4 +80,18 @@ nav {
         color: white;
         font-size: 16px;
     }
+}
+
+
+
+
+.form-create-recipe {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.form-row{
+    display: flex;
+    gap: 10px;
 }
